# CALICO

./: CMakeLists.txt  DEBUG_USAGE.md  PRD_CALICO.md  PROJECTION_DEBUG_COMPLETE.md  README.md  debug_log.md  package.xml  transform_debug.md
config/: iou_fusion_config.yaml  multi_hungarian_config.yaml
include/calico/fusion/: hungarian_matcher.hpp  multi_camera_fusion.hpp
include/calico/nodes/: iou_fusion_node.hpp  multi_iou_fusion_node.hpp  projection_debug_node.hpp
include/calico/tracking/: imu_compensator.hpp  track.hpp  ukf_tracker.hpp
include/calico/utils/: config_loader.hpp  imu_compensator.hpp  memory_pool.hpp  message_converter.hpp  projection_utils.hpp
include/calico/visualization/: rviz_marker_publisher.hpp
launch/: calico_full.launch.py  iou_fusion.launch.py  multi_camera_fusion.launch.py  multi_iou_fusion.launch.py  projection_debug.launch.py  projection_debug_dual.launch.py
src/fusion/: hungarian_matcher.cpp  multi_camera_fusion.cpp
src/nodes/: iou_fusion_node.cpp  multi_camera_fusion_node.cpp  multi_iou_fusion_node.cpp  projection_debug_node.cpp  ukf_tracking_node.cpp  visualization_node.cpp
src/tracking/: imu_compensator.cpp  track.cpp  ukf_tracker.cpp
src/utils/: config_loader.cpp  imu_compensator.cpp  message_converter.cpp  projection_utils.cpp
src/visualization/: rviz_marker_publisher.cpp
